--- a/GloryCasino/Info.plist
+++ b/GloryCasino/Info.plist
@@ -6,6 +6,8 @@
 	<array>
 		<string>Inter-Black.ttf</string>
 		<string>Inter-SemiBold.ttf</string>
+		<string>Inter-Bold.ttf</string>
+		<string>Inter-Medium.ttf</string>
 	</array>
 </dict>
 </plist>
