--- a/GloryCasino/Info.plist
+++ b/GloryCasino/Info.plist
@@ -8,6 +8,7 @@
 		<string>Inter-SemiBold.ttf</string>
 		<string>Inter-Bold.ttf</string>
 		<string>Inter-Medium.ttf</string>
+		<string>KottoSlab-Bold.ttf</string>
 	</array>
 </dict>
 </plist>
